TDM-153 refactor ws service